=======
CHANGES
=======

-----
0.6.1
-----

bootstraping
============

* The boostrap process leave setuptools alone if detected in the system
  and --root or --prefix is provided, but is not in the same location.
  This closes http://bitbucket.org/tarek/distribute/issue/10.

---
0.6
---

setuptools
==========

* Packages required at build time where not fully present at install time.
  This closes http://bitbucket.org/tarek/distribute/issue/12.

* Protected against failures in tarfile extraction. This closes
  http://bitbucket.org/tarek/distribute/issue/10.

* Made Jython api_tests.txt doctest compatible. This closes
  http://bitbucket.org/tarek/distribute/issue/7.

* sandbox.py replaced builtin type file with builtin function open. This
  closes http://bitbucket.org/tarek/distribute/issue/6.

* Immediately close all file handles. This closes
  http://bitbucket.org/tarek/distribute/issue/3.

* Added compatibility with Subversion 1.6. This references
  http://bitbucket.org/tarek/distribute/issue/1.

pkg_resources
=============

* Avoid a call to /usr/bin/sw_vers on OSX and use the official platform API
  instead. Based on a patch from ronaldoussoren. This closes
  http://bitbucket.org/tarek/distribute/issue/5.

* Fixed a SandboxViolation for mkdir that could occur in certain cases.
  This closes http://bitbucket.org/tarek/distribute/issue/13.

* Allow to find_on_path on systems with tight permissions to fail gracefully.
  This closes http://bitbucket.org/tarek/distribute/issue/9.

* Corrected inconsistency between documentation and code of add_entry.
  This closes http://bitbucket.org/tarek/distribute/issue/8.

* Immediately close all file handles. This closes
  http://bitbucket.org/tarek/distribute/issue/3.

easy_install
============

* Immediately close all file handles. This closes
  http://bitbucket.org/tarek/distribute/issue/3.
